rename everything to make stupid go happy

--- a/web/index.templ
+++ b/web/index.templ
@@ -1,8 +1,8 @@
 package web
 
 import (
-	"github.com/TecharoHQ/anubis"
-	"github.com/TecharoHQ/anubis/xess"
+	"github.com/vale981/anubis"
+	"github.com/vale981/anubis/xess"
 )
 
 templ base(title string, body templ.Component, challenge any, ogTags map[string]string) {
@@ -30,7 +30,7 @@ templ base(title string, body templ.Component, challenge any, ogTags map[string]
 				<footer>
 					<center>
 						<p>
-							Protected by <a href="https://github.com/TecharoHQ/anubis">Anubis</a> from <a
+							Protected by <a href="https://github.com/vale981/anubis">Anubis</a> from <a
 	href="https://techaro.lol"
 >Techaro</a>. Made with ❤️ in 🇨🇦.
 						</p>
@@ -65,7 +65,7 @@ templ index() {
 			<summary>Why am I seeing this?</summary>
 			<p>
 				You are seeing this because the administrator of this website has set up <a
-	href="https://github.com/TecharoHQ/anubis"
+	href="https://github.com/vale981/anubis"
 >Anubis</a> to protect the server against the scourge of
 				<a href="https://thelibre.news/foss-infrastructure-is-under-attack-by-ai-companies/">
 					AI companies
